<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Calculator">

    <LinearLayout
        android:id="@+id/Layout"
        app:layout_constraintVertical_weight="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/CentralLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/newtegomin"
                android:text="@string/calculator"
                android:textSize="35sp"
                app:layout_constraintBottom_toTopOf="@id/outputBox"
                app:layout_constraintEnd_toEndOf="@id/outputBox"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/outputBox"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/deleteIcon"
                android:layout_width="53dp"
                android:layout_height="45dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="@id/outputBox"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/delete_icon" />

            <TextView
                android:id="@+id/outputBox"
                android:layout_width="348dp"
                android:layout_height="46dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="1dp"
                android:enabled="false"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/inputBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/inputBox"
                android:layout_width="348dp"
                android:layout_height="46dp"
                android:background="@drawable/border"
                android:enabled="false"
                android:text="@string/_0"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:cornerRadius="28dp"
                app:layout_constraintBottom_toTopOf="@+id/button1"
                app:layout_constraintEnd_toEndOf="@+id/outputBox"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/outputBox"
                app:layout_constraintTop_toBottomOf="@+id/outputBox" />

            <Button
                android:id="@+id/button1"
                android:layout_width="80dp"
                android:layout_height="62dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:backgroundTint="#49596A"
                android:text="@string/_1"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/button5"
                app:layout_constraintEnd_toStartOf="@+id/button2"
                app:layout_constraintStart_toStartOf="@+id/inputBox"
                app:layout_constraintTop_toBottomOf="@+id/inputBox" />

            <Button
                android:id="@+id/button2"
                android:layout_width="81dp"
                android:layout_height="62dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:backgroundTint="#49596A"
                android:text="@string/_2"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/button6"
                app:layout_constraintEnd_toStartOf="@+id/button3"
                app:layout_constraintStart_toEndOf="@+id/button1"
                app:layout_constraintTop_toTopOf="@+id/button1" />

            <Button
                android:id="@+id/button3"
                android:layout_width="81dp"
                android:layout_height="62dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:backgroundTint="#49596A"
                android:text="@string/_3"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/button7"
                app:layout_constraintEnd_toStartOf="@+id/button4"
                app:layout_constraintStart_toEndOf="@+id/button2"
                app:layout_constraintTop_toTopOf="@+id/button2" />

            <Button
                android:id="@+id/button4"
                android:layout_width="81dp"
                android:layout_height="62dp"
                android:layout_marginStart="4dp"
                android:backgroundTint="#49596A"
                android:text="@string/_4"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/button8"
                app:layout_constraintEnd_toEndOf="@+id/inputBox"
                app:layout_constraintStart_toEndOf="@+id/button3"
                app:layout_constraintTop_toTopOf="@+id/button3" />

            <Button
                android:id="@+id/button5"
                android:layout_width="80dp"
                android:layout_height="62dp"
                android:layout_marginEnd="4dp"
                android:backgroundTint="#49596A"
                android:text="@string/_5"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/button9"
                app:layout_constraintEnd_toStartOf="@+id/button6"
                app:layout_constraintStart_toStartOf="@+id/button1"
                app:layout_constraintTop_toBottomOf="@+id/button1" />

            <Button
                android:id="@+id/button6"
                android:layout_width="80dp"
                android:layout_height="62dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:backgroundTint="#49596A"
                android:text="@string/_6"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/buttonA"
                app:layout_constraintEnd_toStartOf="@+id/button7"
                app:layout_constraintStart_toEndOf="@+id/button5"
                app:layout_constraintTop_toTopOf="@+id/button5" />

            <Button
                android:id="@+id/button7"
                android:layout_width="80dp"
                android:layout_height="62dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:backgroundTint="#49596A"
                android:text="@string/_7"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/buttonB"
                app:layout_constraintEnd_toStartOf="@+id/button8"
                app:layout_constraintStart_toEndOf="@+id/button6"
                app:layout_constraintTop_toTopOf="@+id/button6" />

            <Button
                android:id="@+id/button8"
                android:layout_width="80dp"
                android:layout_height="62dp"
                android:layout_marginStart="4dp"
                android:backgroundTint="#49596A"
                android:text="@string/_8"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/buttonC"
                app:layout_constraintEnd_toEndOf="@+id/button4"
                app:layout_constraintStart_toEndOf="@+id/button7"
                app:layout_constraintTop_toTopOf="@+id/button7" />

            <Button
                android:id="@+id/button9"
                android:layout_width="80dp"
                android:layout_height="62dp"
                android:layout_marginEnd="4dp"
                android:backgroundTint="#49596A"
                android:text="@string/_9"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/buttonD"
                app:layout_constraintEnd_toStartOf="@+id/buttonA"
                app:layout_constraintStart_toStartOf="@+id/button5"
                app:layout_constraintTop_toBottomOf="@+id/button5" />

            <Button
                android:id="@+id/buttonA"
                android:layout_width="80dp"
                android:layout_height="62dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:backgroundTint="#49596A"
                android:text="@string/a"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/buttonE"
                app:layout_constraintEnd_toStartOf="@+id/buttonB"
                app:layout_constraintStart_toEndOf="@+id/button9"
                app:layout_constraintTop_toTopOf="@+id/button9" />

            <Button
                android:id="@+id/buttonB"
                android:layout_width="80dp"
                android:layout_height="62dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:backgroundTint="#49596A"
                android:text="@string/b"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/buttonF"
                app:layout_constraintEnd_toStartOf="@+id/buttonC"
                app:layout_constraintStart_toEndOf="@+id/buttonA"
                app:layout_constraintTop_toTopOf="@+id/buttonA" />

            <Button
                android:id="@+id/buttonC"
                android:layout_width="80dp"
                android:layout_height="62dp"
                android:layout_marginStart="4dp"
                android:backgroundTint="#49596A"
                android:text="@string/c"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/button0"
                app:layout_constraintEnd_toEndOf="@+id/button8"
                app:layout_constraintStart_toEndOf="@+id/buttonB"
                app:layout_constraintTop_toTopOf="@+id/buttonB" />

            <Button
                android:id="@+id/buttonD"
                android:layout_width="80dp"
                android:layout_height="62dp"
                android:layout_marginEnd="4dp"
                android:backgroundTint="#49596A"
                android:text="@string/d"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/buttonBaza"
                app:layout_constraintEnd_toStartOf="@+id/buttonE"
                app:layout_constraintStart_toStartOf="@+id/button9"
                app:layout_constraintTop_toBottomOf="@+id/button9" />

            <Button
                android:id="@+id/buttonE"
                android:layout_width="80dp"
                android:layout_height="62dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:backgroundTint="#49596A"
                android:text="@string/e"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/buttonBaza"
                app:layout_constraintEnd_toStartOf="@+id/buttonF"
                app:layout_constraintStart_toEndOf="@+id/buttonD"
                app:layout_constraintTop_toTopOf="@+id/buttonD" />

            <Button
                android:id="@+id/buttonF"
                android:layout_width="80dp"
                android:layout_height="62dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:backgroundTint="#49596A"
                android:text="@string/f"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/buttonBack"
                app:layout_constraintEnd_toStartOf="@+id/button0"
                app:layout_constraintStart_toEndOf="@+id/buttonE"
                app:layout_constraintTop_toTopOf="@+id/buttonE" />

            <Button
                android:id="@+id/button0"
                android:layout_width="80dp"
                android:layout_height="62dp"
                android:layout_marginStart="4dp"
                android:backgroundTint="#49596A"
                android:text="@string/_0"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/buttonBack"
                app:layout_constraintEnd_toEndOf="@+id/buttonC"
                app:layout_constraintStart_toEndOf="@+id/buttonF"
                app:layout_constraintTop_toTopOf="@+id/buttonF" />

            <Button
                android:id="@+id/buttonBack"
                android:layout_width="169dp"
                android:layout_height="58dp"
                android:layout_marginStart="8dp"
                android:backgroundTint="#DC4B4B"
                android:text="@string/back"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/buttonInmultire"
                app:layout_constraintEnd_toEndOf="@+id/button0"
                app:layout_constraintStart_toEndOf="@+id/buttonBaza"
                app:layout_constraintTop_toTopOf="@+id/buttonBaza" />

            <Button
                android:id="@+id/buttonBaza"
                android:layout_width="169dp"
                android:layout_height="58dp"
                android:backgroundTint="#26A69A"
                android:text="@string/baza_10_16"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/buttonPlus"
                app:layout_constraintEnd_toStartOf="@+id/buttonBack"
                app:layout_constraintStart_toStartOf="@+id/buttonD"
                app:layout_constraintTop_toBottomOf="@+id/buttonD" />

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="80dp"
                android:layout_height="62dp"
                android:layout_marginEnd="4dp"
                android:backgroundTint="#FFA000"
                android:text="@string/plus"
                android:textSize="30sp"
                app:layout_constraintEnd_toStartOf="@+id/buttonMinus"
                app:layout_constraintStart_toStartOf="@+id/buttonBaza"
                app:layout_constraintTop_toBottomOf="@+id/buttonBaza" />

            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="82dp"
                android:layout_height="62dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:backgroundTint="#FFA000"
                android:text="@string/minus"
                android:textSize="30sp"
                app:layout_constraintEnd_toStartOf="@+id/buttonInmultire"
                app:layout_constraintStart_toEndOf="@+id/buttonPlus"
                app:layout_constraintTop_toTopOf="@+id/buttonPlus" />

            <Button
                android:id="@+id/buttonInmultire"
                android:layout_width="82dp"
                android:layout_height="62dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:backgroundTint="#FFA000"
                android:text="@string/inmultire"
                android:textSize="30sp"
                app:layout_constraintEnd_toStartOf="@+id/buttonEgal"
                app:layout_constraintStart_toEndOf="@+id/buttonMinus"
                app:layout_constraintTop_toTopOf="@+id/buttonMinus" />

            <Button
                android:id="@+id/buttonEgal"
                android:layout_width="80dp"
                android:layout_height="62dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="1dp"
                android:backgroundTint="#1E88E5"
                android:text="@string/egal"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@+id/buttonBack"
                app:layout_constraintStart_toEndOf="@+id/buttonInmultire"
                app:layout_constraintTop_toTopOf="@+id/buttonInmultire" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>